--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     //View
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     // Networking
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
